# CloudMeeting

./: .gitignore  CMakeLists.txt
CloudMeetingClient/: CMakeLists.txt  avatars.qrc  profile.ini
CloudMeetingClient/include/app/: AppContext.h  Application.h
CloudMeetingClient/include/common/: Constants.h  ErrorCode.h  Logger.h  ThreadSafeQueue.h
CloudMeetingClient/include/domain/model/: ChatMessage.h  Participant.h  RoomInfo.h
CloudMeetingClient/include/domain/service/: ChatService.h  MeetingController.h  ParticipantRepository.h  UserProfileService.h
CloudMeetingClient/include/media/: MediaEngine.h
CloudMeetingClient/include/media/capture/: CameraCaptureStrategy.h  IVideoCaptureStrategy.h  ScreenCaptureStrategy.h
CloudMeetingClient/include/media/codec/: AudioDecoder.h  AudioEncoder.h  CodecFactory.h  VideoDecoder.h  VideoEncoder.h
CloudMeetingClient/include/media/device/: DeviceManager.h
CloudMeetingClient/include/network/: MediaUdpClient.h  NetworkFacade.h  PacketCodec.h  ReconnectStrategy.h  SignalingClient.h
CloudMeetingClient/include/protocol/: MediaPacket.h  SignalMessage.h  SignalType.h
CloudMeetingClient/include/ui/: MainWindow.h  MeetingWindow.h
CloudMeetingClient/include/ui/dialogs/: ConfirmDialog.h  CreateMeetingDialog.h  JoinMeetingDialog.h  UserProfileDialog.h
CloudMeetingClient/include/ui/widgets/: ChatPanel.h  ParticipantListWidget.h  ToolBarPanel.h  VideoTileWidget.h
CloudMeetingClient/src/: main.cpp
CloudMeetingClient/src/app/: AppContext.cpp  Application.cpp
CloudMeetingClient/src/common/: Logger.cpp
CloudMeetingClient/src/domain/service/: ChatService.cpp  MeetingController.cpp  ParticipantRepository.cpp  UserProfileService.cpp
CloudMeetingClient/src/media/: MediaEngine.cpp
CloudMeetingClient/src/media/capture/: CameraCaptureStrategy.cpp  ScreenCaptureStrategy.cpp
CloudMeetingClient/src/media/codec/: AudioDecoder.cpp  AudioEncoder.cpp  CodecFactory.cpp  VideoDecoder.cpp  VideoEncoder.cpp
CloudMeetingClient/src/media/device/: DeviceManager.cpp
CloudMeetingClient/src/network/: MediaUdpClient.cpp  NetworkFacade.cpp  PacketCodec.cpp  ReconnectStrategy.cpp  SignalingClient.cpp
CloudMeetingClient/src/ui/: AppStyle.h  MainWindow.cpp  MeetingWindow.cpp
CloudMeetingClient/src/ui/dialogs/: ConfirmDialog.cpp  CreateMeetingDialog.cpp  JoinMeetingDialog.cpp  UserProfileDialog.cpp
CloudMeetingClient/src/ui/widgets/: ChatPanel.cpp  ParticipantListWidget.cpp  ToolBarPanel.cpp  VideoTileWidget.cpp
CloudMeetingServer/: CMakeLists.txt  profile.ini
CloudMeetingServer/include/common/: Constants.h  IdGenerator.h  IniConfig.h  Logger.h  TimeUtil.h
CloudMeetingServer/include/domain/: ClientSession.h  Room.h  RoomManager.h  SessionManager.h
CloudMeetingServer/include/handler/: ChatMessageHandler.h  CreateRoomHandler.h  HeartbeatHandler.h  ICommandHandler.h  JoinRoomHandler.h  LeaveRoomHandler.h  MediaStateHandler.h  RequestKeyframeHandler.h
CloudMeetingServer/include/protocol/: MediaPacket.h  SignalCodec.h  SignalPacket.h  SignalType.h
CloudMeetingServer/include/server/: EpollReactor.h  ServerApp.h  TcpSignalingServer.h  UdpMediaServer.h
CloudMeetingServer/include/service/: BroadcastService.h  MediaForwardService.h  RoomService.h
CloudMeetingServer/src/: main.cpp
CloudMeetingServer/src/common/: IdGenerator.cpp  IniConfig.cpp  Logger.cpp  TimeUtil.cpp
CloudMeetingServer/src/domain/: ClientSession.cpp  Room.cpp  RoomManager.cpp  SessionManager.cpp
CloudMeetingServer/src/handler/: ChatMessageHandler.cpp  CreateRoomHandler.cpp  HeartbeatHandler.cpp  JoinRoomHandler.cpp  LeaveRoomHandler.cpp  MediaStateHandler.cpp  RequestKeyframeHandler.cpp
CloudMeetingServer/src/protocol/: MediaPacket.cpp  SignalCodec.cpp
CloudMeetingServer/src/server/: EpollReactor.cpp  ServerApp.cpp  TcpSignalingServer.cpp  UdpMediaServer.cpp
CloudMeetingServer/src/service/: BroadcastService.cpp  MediaForwardService.cpp  RoomService.cpp
docs/: 云会议系统设计文档.md  云会议说明文档.md  实现步骤.md
